<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Projetaí</string>
    <string name="txt_login_titulo">Login:</string>
    <string name="txt_login_desc_aluno">Bem-vindo, caro aluno !</string>
    <string name="txt_login_desc_aval">Bem-vindo, caro avalista !</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="btn_login">Logar-se</string>
    <string name="btn_cadastro">cad</string>
    <string name="swt_aluno">Aluno</string>
    <string name="swt_avalista">Avalista</string>
    <string name="search">Buscar</string>
    <string name="myProjects">Meus projetos</string>
    <string name="home">Home</string>
    <string name="settings">Configurações</string>
    <string name="nome">Nome</string>
    <string name="settings_theme">Alterar tema</string>
    <string name="settings_theme_desc">alterar tema do app</string>
    <string name="settings_social">Redes sociais</string>
    <string name="settings_social_desc">Permito que minhas redes sociais fiquem visíveis !!</string>
    <string name="settings_edit">Editar informações</string>
    <string name="settings_edit_info_desc">Edite suas informações pessoais</string>
    <string name="cadastro_aluno">Cadastrar Aluno</string>
    <string name="cadastro_info">Aqui você pode cadastrar um aluno</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_infos">Aqui você pode editar suas informações pessoais</string>
    <string name="ra">RA</string>
    <string name="curso">Curso</string>
    <string name="foto">Foto URL</string>
    <string name="semestre_in">Semestre iniciado</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">Linkedin</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar_conta">Deletar Conta</string>
    <string name="delete_desc">Delete sua conta aqui!!</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_logout_desc">Sair do app</string>
</resources>
