<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Nome"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/ra_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-05dp"
            android:text="Nome"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_social_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:text="@string/settings_social"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_social_desc" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:text="@string/settings_theme"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_theme_desc" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"

                android:background="?android:attr/listDivider" />


            <LinearLayout
                android:id="@+id/newEditInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="341dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/settings_edit"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_edit_info_desc" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="center"
                    android:textAlignment="center"
                    app:srcCompat="@android:drawable/ic_media_play" />

            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/error"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/deleteInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/deletar_conta"
                        android:textColor="@color/error"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/delete_desc"
                        android:textColor="@color/error" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@android:drawable/ic_menu_delete" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottom_navigation_fragment"
            android:name="br.senac.pi4.fragment.BottomNavigationFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            tools:layout="@layout/fragment_bottom_navigation" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>